	   time series Seatbelts).

	-  New generic function tsdiag() and methods for arima and arima0,
	   to produce diagnostic plots.  Supersedes arima0.diag().

	-  New functions ARMAacf() and ARMAtoMA() to compute
           theoretical quantities for an ARMA process.

	-  New function acf2AR() to compute the AR process with a given
           autocorrelation function.

    o   Much improved printing of matrices and arrays of type "list".

    o   deriv/deriv3() can now handle expressions involving pnorm and
	dnorm (with a single argument), as in S-PLUS.

    o	rug() now has a "..." argument allowing its location to be specified.

    o	polyroot() now handles coefficient vectors with terminal
	zeroes (as in S).

    o	plclust() in package mva, for more S-PLUS compatibility.

    o	New function expm1() both in R and in C API, for accurate exp(x)-1;
	precision improvement in pexp() and pweibull() in some cases.
	(PR#1334-5)

    o	The "Knuth-TAOCP" option for random-number generation has been
	given an option of using the 2002 revision.  See ?RNG for the
	details: the R usage already protected against the
	reported `weakness'.

    o   Changes in package "methods"

       -  New function validSlotNames().

       -  Classes can explicitly have a "data part", formally
          represented as a .Data slot in the class definition, but
          implemented consistently with informal structures.  While the
          implementation is different, the user-level behavior largely
          follows the discussion in "Programming with Data".

      -   A "next method" facility has been provided, via the function
          callNextMethod.  This calls the method that would have been
          selected if the currently active method didn't exist.  See
          the online documentation.  This is an extension to the API.

    o   New assignment forms of split(); new function unsplit().

    o   New function TukeyHSD for multiple comparisons in the results