@@ -45,5 +45,27 @@ pred <- predict(arima(window(NileNA, 1871, 1930), c(2, 0, 0)), n.ahead = 20)
 lines(pred$pred, lty = 3, col = "red")
 lines(pred$pred + 2*pred$se, lty=2, col="blue")
 lines(pred$pred - 2*pred$se, lty=2, col="blue")
+
+## Structural time series models
+data(Nile, package = "ts")
+par(mfrow = c(3, 1))
+plot(Nile)
+## local level model
+(fit <- StructTS(Nile, type = "level"))
+lines(fitted(fit), lty = 2)              # contempareneous smoothing
+lines(tsSmooth(fit), lty = 2, col = 4)   # fixed-interval smoothing
+plot(residuals(fit)); abline(h = 0, lty = 3)
+## local trend model
+(fit2 <- StructTS(Nile, type = "trend")) ## constant trend fitted
+pred <- predict(fit, n.ahead = 30)
+## with 50\% confidence interval
+ts.plot(Nile, pred$pred, pred$pred + 0.67*pred$se, pred$pred -0.67*pred$se)
+
+## Now consider missing values
+plot(NileNA)
+(fit3 <- StructTS(NileNA, type = "level"))
+lines(fitted(fit3), lty = 2)
+lines(tsSmooth(fit3), lty = 3)
+plot(residuals(fit3)); abline(h = 0, lty = 3)
 }
 \keyword{datasets}
